--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -63,8 +63,10 @@
     font-size: 1.5em;
 }
 #locationName{
-    font-size: 5em;
-    display: block;
+    
+    display:inline-block;
+    font-size: 200%;
+    text-align: center;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
 }
