--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -7,13 +7,13 @@
     left: 0;
     display: block;
   }
-  #debugdistance {
+#debugdistance {
     position: fixed;
     z-index: 10000;
     background-color: #fff;
     padding: 10px;
-    top: 40px;
-    left: 0;
+    top: 0px;
+    right: 0;
     display: block;
   }
   #nav{
